--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
-option(DEBUG "Build with debug symbols" OFF)
+option(DEBUG "Build with debug symbols" ON)
 if (DEBUG)
     set(CMAKE_BUILD_TYPE Debug)
     add_compile_options(-g -O0)
